Fix the reporting-api and network-error-logging Web Platform Tests when Network Service is enabled.

The reason they failed was they rely on the following behaviors from "content_shell --run-web-tests":

  (1) Sending reports is allowed for all origins, irrespective of the BACKGROUND_SYNC permission.
  (2) The timeout for sending reports is 100ms instead of the default (1 minute)

This CL makes "content_shell --run-web-tests" with Network Service enabled behave the same way.

Bug: 910212
Change-Id: I0756a9605b2aa37647d2c049eb2868499f07e65e
Reviewed-on: https://chromium-review.googlesource.com/c/1387449
Commit-Queue: Eric Roman <eroman@chromium.org>
Reviewed-by: Tom Sepez <tsepez@chromium.org>
Reviewed-by: John Abd-El-Malek <jam@chromium.org>
Cr-Commit-Position: refs/heads/master@{#619826}
Former-commit-id: 8e3170c00ba458d82a02de29e2a3e742af718e5d